 - GB Video: Increment BCPS/OCPS even in mode 3 (fixes mgba.io/i/1462)
 - GB Audio: Deschedule channel 3 when disabled (fixes mgba.io/i/1463)
 - GB Audio: Deschedule channel 1 when disabled by sweep (fixes mgba.io/i/1467)
 - GBA Memory: Fix STM/LDM to invalid VRAM
 - GB: Fix savedata initialization (fixes mgba.io/i/1473, mgba.io/i/1478)
Other fixes:
 - Qt: Fix some Qt display driver race conditions
 - Core: Improved lockstep driver reliability (Le Hoang Quyen)
 - Switch: Fix threading-related crash on second launch
 - Qt: Fix FPS target maxing out at 59.727 (fixes mgba.io/i/1421)
 - Core: Fix crashes if core directories aren't set
 - Qt: Fix menu bar staying hidden in full screen (fixes mgba.io/i/317)
 - GB SIO: Fix lockstep failing games aren't reloaded
 - Core: Fix crash when exiting game with cheats loaded
 - GBA Cheats: Fix PARv3 Thumb hooks
 - mGUI: Fix crash if last loaded ROM directory disappears (fixes mgba.io/i/1466)
 - Libretro: Fix crash changing allowing opposing directions (hhromic)
 - Qt: Fix race conditions initializing GDB stub
 - GBA: Set up GPIO mapping on null and ELF ROM regions (fixes mgba.io/i/1481)
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - Debugger: Add breakpoint and watchpoint listing
 - LR35902: Support PC-relative opcode decoding
 - Qt: Support switching webcams
 - Core: Add keysRead callback
 - Qt: Cap window size on start to monitor size
 - GBA BIOS: Add timings for HLE BIOS math functions (fixes mgba.io/i/1396)
 - Debugger: Make tracing compatible with breakpoints/watchpoints
 - Debugger: Print breakpoint/watchpoint number when inserting
 - Qt: Open a message box for Qt frontend errors
 - FFmpeg: Support audio-only recording
 - Qt: Increase maximum magnifications and scaling
 - Qt: Add native FPS button to settings view
 - Qt: Improve sync code